tests-system/rbt-conditional-expression-types/output
(if x then x elsif y > x then y else y) <= x, "potato type"
    ^ rbt-conditional-expression-types/foo.rsl:10: error: expected expression of type Builtin_Boolean, got Builtin_Integer instead
Processed 1 model, 0 checks and 1 requirement file and found 1 error
